Fix flex-grow cell overflowing listview

--- a/blocks/item/item.styl
+++ b/blocks/item/item.styl
@@ -58,7 +58,7 @@ item()
 
 item__cell()
   display block
-  flex-shrink 0
+  flex-shrink 1
   overflow hidden
   item__padding()
 
